kubernetes/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    goldilocks.fairwinds.com/enabled: "true"
